# cognitive

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  DATA_QUALITY_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  FIXES_COMPLETED.md  FIX_PLAN.md  FRONTEND_DEPLOYMENT.md  GITHUB_ACTIONS_FIX.md  GITHUB_ACTIONS_SETUP.md  GITHUB_SECRETS_SETUP.md  IMPLEMENTATION_PLAN.md  ISSUES_SUMMARY.md  KNOWLEDGE_BASE_EXPANSION_COMPLETE.md  LANDING_PAGE_UPDATE.md  Makefile  PRE_LAUNCH_CHECKLIST.md  PROJECT_OVERVIEW.md  RAILWAY_DEPLOYMENT_CHECKLIST.md  RAILWAY_TROUBLESHOOTING.md  README.md  SAVE_SCREENSHOTS_GUIDE.md  START_HERE.md  TESTING_REPORT.md  USER_OUTCOMES.md  VERIFIED_DATA_EXPANSION.md  VISION.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  run.py
data/: backtest_results.json  correlations.json  macro_correlations.json  macro_indicators.json  sec_relationships.json  sp500_entities.json  verified_relationships.json
frontend/: .env.example  .eslintrc.json  .prettierignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
scripts/: README_MSFT_DATA.md  add_msft_relationships.py  backtest.py  build_real_graph.py  calculate_correlations.py  check_entities.py  create_missing_entities.py  daily_update.py  demo.py  fetch_sec_relationships.py  fix_direction_constraint.py  generate_macro_data.py  ingest_sp500_entities.py  migrate_to_db.py  populate_database_from_initial_graph.py  setup_local_db.py  test_learning_loop.py  test_tracker.py  track_earnings.py  validate_data_quality.py  verify_local_data.py  visualize_graph.py
(+125 files in other folders)
